set up the host factory which configures topshelf to enable the console application to be installed as a service.

--- a/DownloadSpeedCalculator/DownloadSpeedCalculator/App.config
+++ b/DownloadSpeedCalculator/DownloadSpeedCalculator/App.config
@@ -1,6 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+  <appSettings>
+    <!--change the config to the number of minutes you wish the app to download the file-->
+    <add key="serviceMinutes" value="30"/>
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <nlog>
+    <variable name="currentDate" value=""/>
+    <targets>
+      <target name="t1" type="File" fileName="~\Logs\${var:currentDate}_servicelog.txt"/>
+      <target name="t2" type="Console"/>
+    </targets>
+    <rules>
+      <logger name="*" minLevel="Debug" writeTo="t1, t2" />
+    </rules>
+  </nlog>
 </configuration>
