--- a/DownloadSpeedCalculator/DownloadSpeedCalculator/DownloadSpeedCalculator.csproj
+++ b/DownloadSpeedCalculator/DownloadSpeedCalculator/DownloadSpeedCalculator.csproj
@@ -38,6 +38,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpeedService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
