fixed log file path, move to the temp folder

--- a/DownloadSpeedCalculator/DownloadSpeedCalculator/App.config
+++ b/DownloadSpeedCalculator/DownloadSpeedCalculator/App.config
@@ -5,7 +5,7 @@
   </configSections>
   <appSettings>
     <!--change the config to the number of minutes you wish the app to download the file-->
-    <add key="serviceMinutes" value="30"/>
+    <add key="serviceMinutes" value="1"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -13,7 +13,7 @@
   <nlog>
     <variable name="currentDate" value=""/>
     <targets>
-      <target name="t1" type="File" fileName="~\Logs\${var:currentDate}_servicelog.txt"/>
+      <target name="t1" type="File" fileName="C:\Temp\DownloadSpeedCalculatorLogs\${var:currentDate}_servicelog.txt"/>
       <target name="t2" type="Console"/>
     </targets>
     <rules>
